add name to footer for base template

--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -37,7 +37,11 @@
 
             {% endblock content %}
         
-        {% comment %} <p>_______________________________________________</p> {% endcomment %}
+        
+        <!-- Footer-->
+        <footer class="py-5 bg-dark">
+            <div class="container"><p class="m-0 text-center text-white">A Work Sample By Pouya Gharibpour. <a href="https://github.com/pouya-gh/MyGames">Source Code</a></p></div>
+        </footer>
             
         <script>
             document.addEventListener('DOMContentLoaded', (event) => {
