--- a/posts/templates/posts/game/play.html
+++ b/posts/templates/posts/game/play.html
@@ -5,31 +5,31 @@
 {% block content %}
 <hr class="mt-0 mb-1">
 <div class="container d-flex justify-content-center">
-  <div id="unity-container" class="unity-desktop row">
-    <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
-    <div id="unity-loading-bar">
-      <div id="unity-logo"></div>
-      <div id="unity-progress-bar-empty">
-        <div id="unity-progress-bar-full"></div>
+  <div id="game-container" class="unity-desktop row">
+    <canvas id="game-canvas" width=960 height=600 tabindex="-1"></canvas>
+    <div id="loading-bar">
+      <div id="game-logo"></div>
+      <div id="progress-bar-empty">
+        <div id="progress-bar-full">Loading...</div>
       </div>
     </div>
-    <div id="unity-warning"> </div>
-    <div id="unity-footer">
-      <div id="unity-webgl-logo"></div>
-      <div id="unity-fullscreen-button"></div>
-      <div id="unity-build-title">{{ game.name }}</div>
+    <div id="game-warning"> </div>
+    <div id="game-footer">
+      <div id="webgl-logo"></div>
+      <div id="game-fullscreen-button"></div>
+      <div id="game-build-title">{{ game.name }}</div>
     </div>
   </div>
 </div>
 {% endblock content %}
 
 {% block domready %}
-var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var warningBanner = document.querySelector("#unity-warning");
+var container = document.querySelector("#game-container");
+      var canvas = document.querySelector("#game-canvas");
+      var loadingBar = document.querySelector("#loading-bar");
+      var progressBarFull = document.querySelector("#progress-bar-full");
+      var fullscreenButton = document.querySelector("#game-fullscreen-button");
+      var warningBanner = document.querySelector("#game-warning");
 
       // Shows a temporary message banner/ribbon for a few seconds, or
       // a permanent error message on top of the canvas if type=='error'.
