add a readme page

--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -26,6 +26,7 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login Here</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'accounts:sign_up' %}">Sign up here</a></li>
                         {% endif %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'posts:readme' %}">ReadMe</a></li>
                         {% comment %} <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li> {% endcomment %}
                     </ul>
                 </div>
