--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -27,6 +27,7 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'accounts:sign_up' %}">Sign up here</a></li>
                         {% endif %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'posts:readme' %}">ReadMe</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'api:game_list' %}">JSON API</a></li>
                         {% comment %} <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li> {% endcomment %}
                     </ul>
                 </div>
