long overdue fixes

--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -43,7 +43,7 @@
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">A Work Sample By Pouya Gharibpour. <a href="https://github.com/pouya-gh/MyGames">Source Code</a></p></div>
-            <div class="container"><p class="m-0 text-center text-white">Checkout My FastAPI Work Sample at <a href="http://194.5.205.136:8000/docs">194.5.205.136:8000/docs</a></p></div>
+            <div class="container"><p class="m-0 text-center text-white">Checkout My E-commerce Work Sample at <a href="https://mystore-srog.onrender.com/">mystore-srog.onrender.com</a></p></div>
         </footer>
             
         <script>
